--- a/myProjects.html
+++ b/myProjects.html
@@ -63,7 +63,7 @@
 										<img src="images/Projetos/Railway.PNG" alt="" />
 									</div>
 									<p>
-										A project to develop a railway mesh simulator with a dispatch system using the A * algorithm and Artificial Neural Networks.</p>
+										A project to develop a railway simulator with a dispatch system using the A * algorithm and Artificial Neural Networks.</p>
 									<ul class="actions special">
 										<li><a href="railway_simulation.html" class="button">Full Story</a></li>
 									</ul>
