--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<div class="row" style="text-align:center;alt: initial;">
 									<div class="column" style="width: 50%;">
 										<section>
-											<img width="30%" height="30%" src="images/electrical.jpg"/>
+											<img style="width: 30%;" src="images/electrical.jpg"/>
 											<h3>Electrical Engineering</h3>
 											<p>
 												I started to graduate in electrical engineering at UFJF in early 2015. The undergraduate course I attended was focused on robotics and industrial automation, I mean, in addition to the electrical disciplines, I also learned about process control and optimization.</p>
