--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											<img style="width: 30%;" src="images/electrical.jpg"/>
 											<h3>Electrical Engineering</h3>
 											<p>
-												I started to graduate in electrical engineering at UFJF in early 2015. The undergraduate course I attended was focused on robotics and industrial automation, I mean, in addition to the electrical disciplines, I also learned about process control and optimization.</p>
+												I started to graduate in electrical engineering at UFJF in early 2015. The undergraduate course I attended was focused on robotics and industrial automation.</p>
 										</section>
 									</div>
 									<div class="column" style="width: 50%;">
@@ -78,7 +78,7 @@
 											<img width="30" height="30" src="images/railway.webp"/>
 											<h3>Railway Work</h3>
 											<p>
-												I currently work for a large railway company called 'MRS Logística'. In this company, my work is very much focused on the analysis of dynamic simulations on the behavior of some specific sections. These analyzes provide an overview of what types of investments are most useful.</p>
+												I currently work for a large railway company called 'MRS Logística'. In this company, my work is focused on the analysis of dynamic simulations on the behavior of some specific sections of the railway. These analyzes provide an overview of what types of investments are most useful.</p>
 										</section>
 									</div>
 								</div>		
@@ -86,7 +86,7 @@
 								<div class="row" style="text-align:center;alt: initial;">
 									<div class="column" style="width: 30%;">
 										<section>
-											<img width="200" height="200" src="images/skills.png"/>
+											<img style="width: 100%;" src="images/skills.png"/>
 										</section>
 									</div>
 									<div class="column" style="width: 70%;">
